Fix wrap for squares on board

--- a/styles.css
+++ b/styles.css
@@ -1,12 +1,15 @@
 #gameboard{
 width: 320px;
 height: 320px;
-background-color:black;
+display: flex;
+flex-wrap: wrap;
 }
+
 .square{
 width: 40px;
 height: 40px;
 }
+
 .beige{
     background-color: rgb(110, 110, 98);
 }
